// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieDetail Page > renders data ready toMatchSnapshot 1`] = `
<div>
  <div
    class="relative w-full min-h-screen"
  >
    <div
      data-testid="Header"
    />
    <div
      data-testid="Hero"
    />
    <div
      data-testid="CreditList"
    />
    <div
      data-testid="CreditList"
    />
  </div>
</div>
`;

exports[`MovieDetail Page > renders initial data toMatchSnapshot 1`] = `
<div>
  <div
    class="relative w-full min-h-screen"
  >
    <div
      data-testid="Header"
    />
    <div
      data-testid="HeroShimmering"
    />
  </div>
</div>
`;
